# NL2SQL

./: .gitignore  Dockerfile  LICENSE  README.md  main.py  pyproject.toml
app/agent/: __init__.py  context.py  graph.py  llm.py  state.py
app/agent/nodes/: __init__.py  add_extra_context.py  correct_sql.py  execute_sql.py  extract_keywords.py  filter_metric.py  filter_table.py  generate_sql.py  merge_retrieved_info.py  recall_column.py  recall_metric.py  recall_value.py  validate_sql.py
app/api/: dependencies.py  lifespan.py
app/api/routers/: __init__.py  health_router.py  query_router.py
app/api/schemas/: __init__.py  query_schema.py
app/clients/: __init__.py  embedding_client_manager.py  es_client_manager.py  mysql_client_manager.py  qdrant_client_manager.py
app/conf/: __init__.py  app_config.py  config_loader.py  meta_config.py
app/core/: __init__.py  context.py  log.py
app/entities/: __init__.py  column_info.py  metric_info.py  table_info.py  table_relation.py
app/models/: __init__.py  base.py  column_info_mysql.py  metric_info_mysql.py  table_info_mysql.py  table_relation_mysql.py
app/prompt/: __init__.py
app/repositories/es/: __init__.py  value_es_repository.py
app/repositories/qdrant/: __init__.py  column_qdrant_repository.py  (+1 more)
app/scripts/: build_meta_knowledge.py
app/services/: __init__.py  meta_knowledge_service.py  query_service.py
bank-agent-fronted/: index.html
bank-agent-fronted/src/: App.vue  style.css
docker/: docker-compose.yaml
docker/elasticsearch/: Dockerfile
docker/mysql/: bank.sql  meta.sql
(+11 files in other folders)
